@startuml

title __GUI's Class Diagram__\n

  package gui {
    class bilet {
        - tymczasowe : String
        + bilet_form : JPanel
        - imie_textField1 : JTextField
        - nazwisko_textField2 : JTextField
        - wydarzenie_comboBox1 : JComboBox
        - typbiletu_comboBox2 : JComboBox
        - kupBiletButton : JButton
        - wiek_textField1 : JTextField
        + komunikat_textField1 : JTextField
        + bilet()
        - refreshBilet()
        - createUIComponents()
        + save()
    }
  }
  

  package gui {
    class organizator_events {
        - log : String
        - pass : String
        - parent : JFrame
        - tymczasowyWybor : String
        + panel1 : JPanel
        - Economy_progressBar1 : JProgressBar
        - Regular_progressBar2 : JProgressBar
        - VIP_progressBar3 : JProgressBar
        - Zysk_textField1 : JTextField
        - events_comboBox1 : JComboBox
        - odświeżButton : JButton
        - utwórzWydarzenieButton : JButton
        - witaj : JLabel
        - calkowityZysk_textField1 : JTextField
        - usuńWydarzenieButton : JButton
        + organizator_events()
        - createUIComponents()
        - refresh()
        - delete()
        + inform()
    }
  }
  

  package gui {
    class organizator_form {
        - log : String
        - pass : String
        - parent : JFrame
        + panel1 : JPanel
        - cenapodstawowa_textField2 : JTextField
        - VIP_textField6 : JTextField
        - Regular_textField7 : JTextField
        - Econowmy_textField8 : JTextField
        - typZespol_textField11 : JTextField
        - nazwaWydarzenie_textField1 : JTextField
        - typSali_comboBox2 : JComboBox
        - pow_textField3 : JTextField
        - Ramka : JPanel
        - nazwaSali_textField4 : JTextField
        - zapiszButton : JButton
        - nazwaZespol_textField5 : JTextField
        - cenaZespol_textField9 : JTextField
        - lokalizacja_textField10 : JTextField
        - data_textField1 : JTextField
        - godzina_textField1 : JTextField
        - takNieCheckBox : JCheckBox
        + organizator_form()
        - createUIComponents()
    }
  }
  

  package gui {
    class organizator_login {
        + panel1 : JPanel
        - textField1 : JTextField
        - passwordField1 : JPasswordField
        + loginButton : JButton
        - registerButton : JButton
        + organizator_login()
        - createUIComponents()
    }
  }
  

  package gui {
    class witamyGUI {
        + panel1 : JPanel
        - wejdźButton : JButton
        - klientRadioButton : JRadioButton
        - organizatorRadioButton : JRadioButton
        + witamyGUI()
        {static} + main()
    }
  }
  

  bilet o-- Wydarzenie : wydarzenie
  bilet o-- ListaOrganizatorów : listaOrganizatorów
  bilet o-- Organizator : organizator
  organizator_events -up-|> Obserwator
  organizator_events o-- Organizator : organizator
  organizator_events o-- ListaOrganizatorów : lista
  organizator_events o-- Zespół : zespol
  organizator_events o-- Sala : sala
  organizator_events o-- Obserwator : obserwator
  organizator_form o-- Organizator : organizator
  organizator_form o-- Wydarzenie : wydarzenie
  organizator_form o-- Sala : sala
  organizator_form o-- Zespół : zespół
  organizator_form o-- ListaOrganizatorów : lista
  organizator_login o-- ListaOrganizatorów : lista
  witamyGUI o-- ListaOrganizatorów : lista


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
